--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ timezone: GMT
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
-url: https://github.com/NoviceDuke/hexo
+url: https://github.com/dukechill/hexo
 root: /hexo/
 permalink: :year/:month/:day/:title/
 permalink_defaults:
@@ -78,7 +78,7 @@ theme: landscape
 ## Docs: https://hexo.io/docs/deployment.html
 deploy:
   type: git
-  repo: https://github.com/NoviceDuke/hexo.git
+  repo: https://github.com/dukechill/hexo.git
   branch: hexo-develop
 # Sitemap
 sitemap:
